# template_fastapi

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 2024_06_27_17_39_00_init.py
db/: database_definition.py  models.py
routers/: router.py
tests/: conftest.py  test_api.py  test_main.py  test_user.py
